kubernetes_myhpapp_helmchart/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2020-03-21T10:01:15Z"
  generation: 1
  labels:
    app: db
  name: db
  namespace: demo
  resourceVersion: "10920"
  selfLink: /apis/apps/v1/namespaces/demo/deployments/db
  uid: d44b629a-6508-483d-99fc-33b07230c513
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: db
    spec:
      containers:
      - image: mysql:latest
        imagePullPolicy: Always
        name: mysql
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-data    
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-claim
status: {}
