kubernetes_myhpapp_helmchart/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2020-03-21T08:51:32Z"
  generation: 1
  labels:
    app: phpmyadmin
  name: phpmyadmin
  namespace: demo
  resourceVersion: "1761"
  selfLink: /apis/apps/v1/namespaces/demo/deployments/phpmyadmin
  uid: cb96eb41-1821-46e4-a44f-643d3fae3b09
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: phpmyadmin
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin/phpmyadmin
        imagePullPolicy: Always
        name: phpmyadmin
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3      
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
