kubernetes_myhpapp_helmchart/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-03-21T10:09:01Z"
  labels:
    app: db
  name: db
  namespace: demo
  resourceVersion: "11995"
  selfLink: /api/v1/namespaces/demo/services/db
  uid: 5d589bc2-064b-4bf4-8b7e-f996fc8f887c
spec:
  clusterIP: 10.100.63.144
  ports:
  - name: 8080-3306
    port: 8080
    protocol: TCP
    targetPort: 3306
  selector:
    app: db
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
