kubernetes_myhpapp_helmchart/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-03-21T09:57:45Z"
  labels:
    app: phpmyadmin
  name: phpmyadmin
  namespace: demo
  resourceVersion: "10459"
  selfLink: /api/v1/namespaces/demo/services/phpmyadmin
  uid: c04ebef9-fca6-42bd-b696-5df77f7678dc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: phpmyadmin
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
