kubernetes_myhpapp_helmchart/phpmyadmin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
spec:
  rules:
  - host: myapp.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin
          servicePort: 80
